traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Compilation error:
TraversalByColumn:11: error: not found: value setPOs
    setPOs(0,j)
    ^